# Media-Converter

./: .gitignore  CMakeLists.txt  README.md  config.default.ini  main.cpp
include/: config.h  httplib.h  init.h  util.h
public/: basic.html
public/javascript/ffmpeg/: ffmpeg.js  ffmpeg_pre.js
public/stylesheet/: converter.css
